--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
